--- a/resources/scss/style.scss
+++ b/resources/scss/style.scss
@@ -6,9 +6,46 @@
     url("~@/fonts/advent-pro-v9-latin-regular.woff") format("woff");
 }
 
+body, html {
+  font-family: "Advent Pro", sans-serif;
+}
+
 .hello {
   color: yellow;
   background: url("~@/images/bridge.jpeg");
   font-family: "Advent Pro";
   min-height: 354px;
+}
+
+.posts {
+  margin: 0 auto;
+  width: 70%;
+
+  h1 {
+    background-color: #7C4FC2;
+    color: #FFFFFF;
+    padding: 15px 10px;
+    border-radius: 5px 5px 0 0;
+    margin: 0;
+  }
+  .post-list {
+    border: 1px solid #cccccc;
+  }
+  .post {
+    border-bottom: 1px solid #cccccc;
+    padding: 10px;
+    h2 {
+      margin: 0;
+    }
+    &:nth-child(even) {
+      background-color: #f1f1f1;
+    }
+  }
+  .loading-indicator {
+    visibility: hidden;
+  }
+
+  &.is-fetching .loading-indicator {
+    visibility: visible;
+  }
 }
